Updated Bulgarian translation by Vladimir Petkov <vpetkov@i-space.org>
2005-02-14  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Vladimir Petkov <vpetkov@i-space.org>

--- a/po/bg.po
+++ b/po/bg.po
@@ -1,18 +1,18 @@
 # Translation of nautilus.HEAD.bg.po to Bulgarian
 # Bulgarian translation of Nautilus for GNOME 2.8
-# Copyright (C) 2002, 2004 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2004, 2005 Free Software Foundation, Inc.
 # Borislav Aleksandrov <B.Aleksandrov@cnsys.bg>, 2002.
 # Vladimir Petkov <vpetkov@i-space.org>, 2004.
-# 
-# 
+# Vladimir Petkov <vpetkov@i-space.org>, 2005.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.10\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-10 12:02+0100\n"
-"PO-Revision-Date: 2005-01-20 14:36+0200\n"
+"POT-Creation-Date: 2005-02-14 09:48+0200\n"
+"PO-Revision-Date: 2005-02-14 09:47+0200\n"
 "Last-Translator: Vladimir Petkov <vpetkov@i-space.org>\n"
-"Language-Team: English <bg@li.org>\n"
+"Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -948,7 +948,7 @@ msgstr "Обръщане на реда за подреждане в новите
 #. Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone.
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:70
 msgid "Sans 10"
-msgstr ""
+msgstr "Sans 10"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "Show folders first in windows"
@@ -1681,7 +1681,6 @@ msgid "The file \"%s\" already exists.  Would you like to replace it?"
 msgstr "Файлът \"%s\" вече съществува. Искате ли да го презапишете?"
 
 #: libnautilus-private/nautilus-file-operations.c:1102
-#, fuzzy
 msgid ""
 "If you replace the existing folder, any files in it that conflict with the "
 "files being copied will be overwritten."
@@ -1860,9 +1859,8 @@ msgstr "Преместване на файловете в кошчето"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1933
-#, fuzzy
 msgid "Throwing out file:"
-msgstr "Собственикът на файла."
+msgstr "Изхвърляне на файл:"
 
 #. localizers: label prepended to the name of the current file moved
 #: libnautilus-private/nautilus-file-operations.c:1935
@@ -1881,9 +1879,8 @@ msgstr "Преместване на файлове"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1944
-#, fuzzy
 msgid "Moving file:"
-msgstr "Преместване на файлове"
+msgstr "Преместване на файл:"
 
 #: libnautilus-private/nautilus-file-operations.c:1947
 msgid "Preparing To Move..."
@@ -1900,9 +1897,8 @@ msgstr "Създаване на връзка към файлове"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1958
-#, fuzzy
 msgid "Linking file:"
-msgstr "Създаване на връзка"
+msgstr "Създаване на връзка към файл:"
 
 #. localizers: label prepended to the name of the current file linked
 #: libnautilus-private/nautilus-file-operations.c:1960
@@ -1924,9 +1920,8 @@ msgstr "Копиране на файлове"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1970
-#, fuzzy
 msgid "Copying file:"
-msgstr "Копиране на файлове"
+msgstr "Копиране на файл:"
 
 #. localizers: label prepended to the name of the current file copied
 #: libnautilus-private/nautilus-file-operations.c:1972
@@ -2078,17 +2073,16 @@ msgid "Preparing to Empty the Trash..."
 msgstr "Подготовка за изпразване на кошчето"
 
 #: libnautilus-private/nautilus-file-operations.c:2562
-#, fuzzy
 msgid "Empty all of the items from the trash?"
-msgstr ""
-"Сигурни ли сте, че искате да изтриете за постоянно тези обекти от кошчето?"
+msgstr "Изтриване на всички обекти от кошчето?"
 
 #: libnautilus-private/nautilus-file-operations.c:2565
-#, fuzzy
 msgid ""
 "If you choose to empty the trash, all items in it will be permanently lost. "
 "Please note that you can also delete them separately."
-msgstr "Ако изпразните кошчето, обектите вътре ще бъдат изтрити за постоянно."
+msgstr ""
+"Ако изпразните кошчето, обектите вътре ще бъдат изтрити за постоянно. "
+"Забележете, че можете да ги трието по отделно."
 
 #. name, stock id
 #: libnautilus-private/nautilus-file-operations.c:2587
@@ -2971,9 +2965,8 @@ msgid "Background"
 msgstr "Фон"
 
 #: src/file-manager/fm-desktop-icon-view.c:686
-#, fuzzy
 msgid "E_mpty Trash"
-msgstr "Изпразване на кошчето"
+msgstr "Из_празване на кошчето"
 
 #. name, stock id
 #: src/file-manager/fm-desktop-icon-view.c:696
@@ -3058,9 +3051,10 @@ msgstr "Сигурен ли сте, че искате да изтриете за
 msgid "Are you sure you want to permanently delete the %d selected item?"
 msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items?"
-msgstr[0] "Сигурни ли сте, че искате да изтриете за постоянно %d избран обект?"
+msgstr[0] ""
+"Сигурен ли сте, че искате да изтриете за постоянно \"%d\" избран обект?"
 msgstr[1] ""
-"Сигурни ли сте, че искате да изтриете за постоянно %d избрани обекта?"
+"Сигурен ли сте, че искате да изтриете за постоянно \"%d\" избрани обекта?"
 
 #: src/file-manager/fm-directory-view.c:825
 msgid "If you delete an item, it is permanently lost."
@@ -3730,14 +3724,12 @@ msgstr[0] "Отваряне в %d нов прозорец"
 msgstr[1] "Отваряне в %d нови прозорци"
 
 #: src/file-manager/fm-directory-view.c:6238
-#, fuzzy
 msgid "_Browse Folder"
-msgstr "Разглеждане на папка"
+msgstr "_Разглеждане на папка"
 
 #: src/file-manager/fm-directory-view.c:6240
-#, fuzzy
 msgid "_Browse Folders"
-msgstr "Разглеждане на папки"
+msgstr "_Разглеждане на папки"
 
 #: src/file-manager/fm-directory-view.c:6259
 msgid "_Delete from Trash"
@@ -4443,11 +4435,11 @@ msgstr "Създаване на прозорец за настройките."
 msgid "Select an icon"
 msgstr "Избиране на икона"
 
-#: src/file-manager/fm-tree-model.c:1200
+#: src/file-manager/fm-tree-model.c:1210
 msgid "(Empty)"
 msgstr "(Празно)"
 
-#: src/file-manager/fm-tree-model.c:1200
+#: src/file-manager/fm-tree-model.c:1210
 msgid "Loading..."
 msgstr "Зареждане..."
 
@@ -5846,6 +5838,10 @@ msgid ""
 "the Free Software Foundation; either version 2 of the License, or \n"
 "(at your option) any later version."
 msgstr ""
+"Nautilus е свободен софтуер; можете да го разпространявате и/или променяте \n"
+"под същите условия на лиценза Гну Общ Публичен Лиценз както е публикуван \n"
+" от Free Software Foundation; или версия 2 на същия Лиценз, или \n"
+"(по ваш избор) всяка по-нова версия."
 
 #: src/nautilus-window-menus.c:411
 msgid ""
@@ -5854,6 +5850,10 @@ msgid ""
 "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the \n"
 "GNU General Public License for more details."
 msgstr ""
+"Nautilus се разпространява с надеждата, че ще бъде полезен,\n"
+"но БЕЗ НИКАКВИ ГАРАНЦИИ, дори и косвените за ПРОДАЖБА или\n"
+"СЪОТВЕТСТВИЕ С КАКВАТО И ДА Е УПОТРЕБА. За подробности\n"
+"погледнете Общия публичен лиценз на ГНУ."
 
 #: src/nautilus-window-menus.c:415
 msgid ""
@@ -5861,6 +5861,10 @@ msgid ""
 "along with Nautilus; if not, write to the Free Software Foundation, Inc., \n"
 "59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
+"Заедно с Nautilus трябва да сте получили копие на лицена \n"
+"Общ публичен лиценз на ГНУ. Ако не сте, пишете на Free Software Foundation, "
+"Inc. \n"
+"59 Temple Place, Suite 330, Boston, MA 02111-1307 USA"
 
 #: src/nautilus-window-menus.c:444
 msgid ""
@@ -5872,7 +5876,7 @@ msgstr ""
 
 #: src/nautilus-window-menus.c:448
 msgid "Copyright © 1999-2005 The Nautilus authors"
-msgstr ""
+msgstr "Авторски права © 1999-2005 Авторите на Nautilus"
 
 #: src/nautilus-window-menus.c:453
 msgid "translator-credits"
@@ -6115,227 +6119,3 @@ msgstr "Мрежови сървъри"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Преглед на вашите мрежови сървъри във файловия мениджър Nautilus"
-
-#~ msgid "Allaire"
-#~ msgstr "Алер"
-
-#~ msgid "Binary Freedom"
-#~ msgstr "Двоична свобода"
-
-#~ msgid "Borland"
-#~ msgstr "Борланд"
-
-#~ msgid "CNET Computers.com"
-#~ msgstr "CNET Computers.com"
-
-#~ msgid "CNET Linux Center"
-#~ msgstr "Линукс Център на CNET"
-
-#~ msgid "CollabNet"
-#~ msgstr "CollabNet"
-
-#~ msgid "Compaq"
-#~ msgstr "Compaq"
-
-#~ msgid "Conectiva"
-#~ msgstr "Conectiva"
-
-#~ msgid "Covalent"
-#~ msgstr "Covalent"
-
-#~ msgid "Debian.org"
-#~ msgstr "Debian.org"
-
-#~ msgid "Dell"
-#~ msgstr "Dell"
-
-#~ msgid "Freshmeat.net"
-#~ msgstr "Freshmeat.net"
-
-#~ msgid "GNOME.org"
-#~ msgstr "GNOME.org"
-
-#~ msgid "GNU.org"
-#~ msgstr "GNU.org"
-
-#~ msgid "Hardware"
-#~ msgstr "Хардуер"
-
-#~ msgid "International"
-#~ msgstr "Международнен"
-
-#~ msgid "Linux Documentation Project"
-#~ msgstr "Проект за документация на Linux"
-
-#~ msgid "Linux One"
-#~ msgstr "Linux One"
-
-#~ msgid "Linux Online"
-#~ msgstr "Linux Online"
-
-#~ msgid "Linux Resources"
-#~ msgstr "Ресурси на Linux"
-
-#~ msgid "Linux Weekly News"
-#~ msgstr "Седмични новини за Linux"
-
-#~ msgid "LinuxNewbie.org"
-#~ msgstr "LinuxNewbie.org"
-
-#~ msgid "LinuxOrbit.com"
-#~ msgstr "LinuxOrbit.com"
-
-#~ msgid "MandrakeSoft"
-#~ msgstr "MandrakeSoft"
-
-#~ msgid "Netraverse"
-#~ msgstr "Netraverse"
-
-#~ msgid "News and Media"
-#~ msgstr "Новини и Медии"
-
-#~ msgid "O'Reilly"
-#~ msgstr "O'Reilly"
-
-#~ msgid "OSDN"
-#~ msgstr "OSDN"
-
-#~ msgid "Open Source Asia"
-#~ msgstr "Open Source Asia"
-
-#~ msgid "OpenOffice"
-#~ msgstr "OpenOffice"
-
-#~ msgid "Penguin Computing"
-#~ msgstr "Penguin Computing"
-
-#~ msgid "Rackspace"
-#~ msgstr "Rackspace"
-
-#~ msgid "Red Hat"
-#~ msgstr "Red Hat"
-
-#~ msgid "Red Hat Network"
-#~ msgstr "Red Hat Network"
-
-#~ msgid "RedFlag Linux"
-#~ msgstr "RedFlag Linux"
-
-#~ msgid "SourceForge"
-#~ msgstr "SourceForge"
-
-#~ msgid "SuSE"
-#~ msgstr "SuSE"
-
-#~ msgid "Sun StarOffice"
-#~ msgstr "Sun StarOffice"
-
-#~ msgid "Sun Wah Linux"
-#~ msgstr "Sun Wah Linux"
-
-#~ msgid "Web Services"
-#~ msgstr "Интернет услуги"
-
-#~ msgid "Ximian"
-#~ msgstr "Ximian"
-
-#~ msgid "ZDNet Linux Hardware Database"
-#~ msgstr "Хардуерна база данни за Linux на ZDNet"
-
-#~ msgid "ZDNet Linux Resource Center"
-#~ msgstr "Ресурсов център за Linux на ZDNet"
-
-#~ msgid "Zero-Knowledge"
-#~ msgstr "Нулеви-познания"
-
-#~ msgid "Files thrown out:"
-#~ msgstr "Изхвърлени файлове:"
-
-#~ msgid "Files moved:"
-#~ msgstr "Преместени файлове:"
-
-#~ msgid "Files linked:"
-#~ msgstr "Файлове с връзки:"
-
-#~ msgid "Files copied:"
-#~ msgstr "Копирани файлове:"
-
-#~ msgid "Icons Viewer"
-#~ msgstr "Преглед с икони"
-
-#~ msgid "List Viewer"
-#~ msgstr "Списъчен преглед"
-
-#~ msgid "Nautilus Tree View"
-#~ msgstr "Дървовиден изглед на Nautilus"
-
-#~ msgid "Nautilus Tree side pane"
-#~ msgstr "Страничен панел на Nautilus за дървовиден изглед"
-
-#~ msgid "Nautilus file manager component that shows a scrollable list"
-#~ msgstr ""
-#~ "Компонент на мениджъра на файлове Nautilus, който се показва в "
-#~ "преместваемия списък"
-
-#~ msgid ""
-#~ "Nautilus file manager component that shows a scrollable list for search "
-#~ "results"
-#~ msgstr ""
-#~ "Компонент на мениджъра на файлове Nautilus, който се показва в "
-#~ "преместваемия списък за резултати от търсене"
-
-#~ msgid ""
-#~ "Nautilus file manager component that shows a two-dimensional icon space"
-#~ msgstr ""
-#~ "Компонент на мениджъра на файлове Nautilus, който се показва в двумерно "
-#~ "пространство за икони"
-
-#~ msgid "Nautilus file manager component that shows icons on the desktop"
-#~ msgstr ""
-#~ "Компонент на мениджъра на файлове Nautilus, показващ иконите върху "
-#~ "работния плот"
-
-#~ msgid "Nautilus file manager desktop icon view"
-#~ msgstr "Мениджър на файлове Nautilus в преглед с икони на раб. място"
-
-#~ msgid "Nautilus file manager icon view"
-#~ msgstr "Мениджър на файлове Nautilus в преглед с икони"
-
-#~ msgid "Nautilus file manager list view"
-#~ msgstr "Мениджър на файлове Nautilus в списъчен преглед"
-
-#~ msgid "Nautilus file manager search results list view"
-#~ msgstr ""
-#~ "Мениджър на файлове Nautilus в списъчен преглед на резултатите от търсене"
-
-#~ msgid "Search List"
-#~ msgstr "Списък за търсене"
-
-#~ msgid "View as Icons"
-#~ msgstr "Преглед като икони"
-
-#~ msgid "View as List"
-#~ msgstr "Преглед като списък"
-
-#~ msgid "View as _Icons"
-#~ msgstr "Преглед като _икони"
-
-#~ msgid "View as _List"
-#~ msgstr "Преглед като _списък"
-
-#~ msgid "_Empty"
-#~ msgstr "_Празно"
-
-#~ msgid "Use the default background for this location"
-#~ msgstr "Използва подразбиращ се фон за това местоположение"
-
-#~ msgid ""
-#~ "Copyright © 2002-2005 Red Hat, Inc\n"
-#~ "Copyright © 2002-2004 Novell, Inc\n"
-#~ "Copyright © 1999-2001 Eazel, Inc.\n"
-#~ "And all the other authors"
-#~ msgstr ""
-#~ "Авторски права © 2002-2005 Red Hat, Inc\n"
-#~ "Авторски права © 2002-2004 Novell, Inc\n"
-#~ "Авторски права © 1999-2001 Eazel, Inc.\n"
-#~ "И всички останали автори"
