--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-14  Hendrik Richter  <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-02-14  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
