--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-14  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2005-02-14  Hendrik Richter  <hendrik@gnome-de.org>
 
 	* de.po: Updated German translation.
