--- a/po/nl.po
+++ b/po/nl.po
@@ -8,16 +8,16 @@
 # Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>, 2002.
 # Ronald Hummelink <ronald@hummelink.xs4all.nl>, 2002.
 # Jordi Bosveld <jotti@jotti.dhs.org>, 2002.
-# Reinout van Schouwen <reinout@cs.vu.nl>, 2002-2004
+# Reinout van Schouwen <reinout@cs.vu.nl>, 2002-2005
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-02-10 12:02+0100\n"
-"PO-Revision-Date: 2004-09-03 15:36+0100\n"
+"POT-Creation-Date: 2005-02-14 05:16+0100\n"
+"PO-Revision-Date: 2005-02-14 12:25+0100\n"
 "Last-Translator: Reinout van Schouwen <reinout@cs.vu.nl>\n"
-"Language-Team: Dutch <vertaling@nl.linux.org>\n"
+"Language-Team: Dutch <vertaling@vrijschrift.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -978,7 +978,7 @@ msgstr "Sorteervolgorde omdraaien in nieuwe vensters"
 #. Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone.
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:70
 msgid "Sans 10"
-msgstr ""
+msgstr "Sans 10"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "Show folders first in windows"
@@ -3013,9 +3013,8 @@ msgid "Background"
 msgstr "Achtergrond"
 
 #: src/file-manager/fm-desktop-icon-view.c:686
-#, fuzzy
 msgid "E_mpty Trash"
-msgstr "Prullenbak legen"
+msgstr "Prulle_nbak legen"
 
 #. name, stock id
 #: src/file-manager/fm-desktop-icon-view.c:696
@@ -3778,14 +3777,12 @@ msgstr[0] "Openen in nieuw venster"
 msgstr[1] "Openen in %d nieuwe vensters"
 
 #: src/file-manager/fm-directory-view.c:6238
-#, fuzzy
 msgid "_Browse Folder"
-msgstr "Map doorbladeren"
+msgstr "Map door_bladeren"
 
 #: src/file-manager/fm-directory-view.c:6240
-#, fuzzy
 msgid "_Browse Folders"
-msgstr "Mappen doorbladeren"
+msgstr "Mappen door_bladeren"
 
 #: src/file-manager/fm-directory-view.c:6259
 msgid "_Delete from Trash"
@@ -4502,11 +4499,11 @@ msgstr "Aanmaken eigenschappenvenster..."
 msgid "Select an icon"
 msgstr "Kies een pictogram"
 
-#: src/file-manager/fm-tree-model.c:1200
+#: src/file-manager/fm-tree-model.c:1210
 msgid "(Empty)"
 msgstr "(Leeg)"
 
-#: src/file-manager/fm-tree-model.c:1200
+#: src/file-manager/fm-tree-model.c:1210
 msgid "Loading..."
 msgstr "Laden..."
 
