fixup changelog entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
 	* src/nautilus-window-private.h:
 	* src/nautilus-window.c:
 	Handle startup notification across corba activation.
+	Patch from Elijah Newren <newren@gmail.com>
 
 2005-02-11  Alexander Larsson  <alexl@redhat.com>
 
