Fixes to the startup notification stuff. Patch from Elijah Newren
2005-02-15  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c:
	* src/nautilus-shell.c:
	Fixes to the startup notification stuff.
	Patch from Elijah Newren <newren@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-15  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-application.c:
+	* src/nautilus-shell.c:
+	Fixes to the startup notification stuff.
+	Patch from Elijah Newren <newren@gmail.com>
+
 2005-02-14  Alexander Larsson  <alexl@redhat.com>
 
 	* data/applications.desktop.in:
