--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Fix typo.
+	* no.po: Same
+
 2005-02-14  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
