--- a/po/nb.po
+++ b/po/nb.po
@@ -736,7 +736,7 @@ msgid ""
 "If set to true, then Nautilus lets you edit some of the more esoteric "
 "options of a file in the file preferences dialog."
 msgstr ""
-"Nautilus lar deg rediger noen av de mer esoteriske alternativen egenskapene "
+"Nautilus lar deg rediger noen av de mer eksotiske egenskapene "
 "ved en fil i brukervalg-dialogen hvis satt til «true»."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:40
