--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-16  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
 2005-02-15  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
