--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-02-17  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/nautilus-navigation-window-menus.c:
+	(add_bookmark_for_current_location):
+	Only add a bookmark once for a given location.
+	Fixes #161862.
+	
+	Patch from Subodh Soni <ssoni@novell.com>
+
 2005-02-15  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-application.c:
