Fix credits of my last commit.
2005-02-17  Martin Wehner  <martin.wehner@epost.de>

	* ChangeLog:
	Fix credits of my last commit.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@
 	Only add a bookmark once for a given location.
 	Fixes #161862.
 	
-	Patch from Subodh Soni <ssoni@novell.com>
+	Patch from egeetha@novell.com
 
 2005-02-15  Alexander Larsson  <alexl@redhat.com>
 
