--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-17  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2005-02-16  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
