Don't show open with property page for desktop files and desktop special
2005-02-18  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (should_show_open_with):
	Don't show open with property page for desktop files and
	desktop special icons.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-18  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c (should_show_open_with):
+	Don't show open with property page for desktop files and
+	desktop special icons.
+
 2005-02-17  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/nautilus-navigation-window-menus.c:
