fix #136578 (Menu key should pop up context menu).
2005-02-18  Paolo Borelli  <pborelli@katamail.com>

	*  libnautilus-private/nautilus-icon-container.c (popup-menu):
	fix #136578 (Menu key should pop up context menu).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-18  Paolo Borelli  <pborelli@katamail.com>
+
+	*  libnautilus-private/nautilus-icon-container.c (popup-menu):
+	fix #136578 (Menu key should pop up context menu).
+
 2005-02-18  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-properties-window.c (should_show_open_with):
