Updated French translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-20  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Vincent Carriere <carriere_vincent@yahoo.fr>.
+
 2005-02-18  Pauli Virtanen <pauli.virtanen@hut.fi>
 
 	 * fi.po: Updated Finnish translation.
