Spellcheck a bit same
2005-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Spellcheck a bit
	* no.po: same

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-20  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Spellcheck a bit
+	* no.po: same
+
 2005-02-20  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation from
