--- a/po/nb.po
+++ b/po/nb.po
@@ -5837,7 +5837,7 @@ msgid ""
 "59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
 "Du skal ha mottatt en kopi av GNU General Public License \n"
-"sammen med Nautilus. Hvsi du ikke har det kan du skrive til Free \n"
+"sammen med Nautilus. Hvis du ikke har det kan du skrive til Free \n"
 "Software Foundation, Inc. 59 Temple Place, Suite 330, Boston, MA\n"
 "02111-1307 USA"
 
