Updated Simplified Chinese translation

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5333,7 +5333,7 @@ msgstr "转到下一个访问过的位置"
 #: src/nautilus-navigation-window.c:613 src/nautilus-window.c:654
 #, c-format
 msgid "View as %s"
-msgstr "当作 %s 查看"
+msgstr "查看为%s"
 
 #: src/nautilus-navigation-window.c:689
 #, c-format
