Use EEL_DESKTOP_URI instead of "x-nautilus-desktop:".
2005-02-21  Martin Wehner  <martin.wehner@epost.de>

	* src/file-manager/fm-desktop-icon-view.c:
	(fm_desktop_icon_view_supports_uri):
	Use EEL_DESKTOP_URI instead of "x-nautilus-desktop:".

	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-21  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-desktop-icon-view.c:
+	(fm_desktop_icon_view_supports_uri):
+	Use EEL_DESKTOP_URI instead of "x-nautilus-desktop:".
+	
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+
 2005-02-18  Paolo Borelli  <pborelli@katamail.com>
 
 	*  libnautilus-private/nautilus-icon-container.c (popup-menu):
