Update my email address.
2005-02-22  Martin Wehner  <martin.wehner@gmail.com>

	* MAINTAINERS:
	Update my email address.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-22  Martin Wehner  <martin.wehner@gmail.com>
+
+	* MAINTAINERS:
+	Update my email address.
+
 2005-02-21  Martin Wehner  <martin.wehner@epost.de>
 
 	* src/file-manager/fm-desktop-icon-view.c:
