Remove unneeded startup_id.
2005-02-22  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-application.c: (create_window):
	* src/nautilus-window-private.h:
	* src/nautilus-window.c: (nautilus_window_init),
	(nautilus_window_finalize):
	Remove unneeded startup_id.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-22  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-application.c: (create_window):
+	* src/nautilus-window-private.h:
+	* src/nautilus-window.c: (nautilus_window_init),
+	(nautilus_window_finalize):
+	Remove unneeded startup_id.
+
 2005-02-22  Martin Wehner  <martin.wehner@gmail.com>
 
 	* MAINTAINERS:
