Remove stale comment. Patch from Jaap Haitsma <jaap@haitsma.org>
2005-02-22  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c: (should_show_mime_type):
	Remove stale comment.
	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-02-22  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-properties-window.c: (should_show_mime_type):
+	Remove stale comment.
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+
+2005-02-22  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-application.c: (end_startup_notification):
 	Don't give critical warnings if we have no startup_id.
 	
