--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-22  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-02-20  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Spellcheck a bit
