Remove old docs.
2005-02-23  Alexander Larsson  <alexl@redhat.com>

	* docs/nautilus-context-menus.txt:
	Remove old docs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-23  Alexander Larsson  <alexl@redhat.com>
+
+	* docs/nautilus-context-menus.txt:
+	Remove old docs.
+
 2005-02-22  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-desktop-icon-file.c:
