deep count on target files, not original files. Fixes properties for e.g.
2005-02-24  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c:
	deep count on target files, not original files.
	Fixes properties for e.g. home icon on desktop.
	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-02-24  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c:
+	deep count on target files, not original files.
+	Fixes properties for e.g. home icon on desktop.
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+
 2005-02-23  Alexander Larsson  <alexl@redhat.com>
 
 	* docs/nautilus-context-menus.txt:
