Make show_original work (had a typo) Make where use original file, not
2005-02-24  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c:
	Make show_original work (had a typo)
	Make where use original file, not target.
	Fixes location display for desktop icons.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2005-02-24  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-properties-window.c:
+	Make show_original work (had a typo)
+	Make where use original file, not target.
+	Fixes location display for desktop icons.
+	
+2005-02-24  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c:
 	deep count on target files, not original files.
 	Fixes properties for e.g. home icon on desktop.
 	Patch from Jaap Haitsma <jaap@haitsma.org>
