Updated Greek Translation.

--- a/po/el.po
+++ b/po/el.po
@@ -4891,7 +4891,7 @@ msgstr "Επεξεργασία Σελιδοδεικτών"
 #: src/nautilus-connect-server-dialog-main.c:66
 #, c-format
 msgid "Can't display location \"%s\""
-msgstr "Αδύνατη η εμφάνιση της τοποθεσίας·\"%s\""
+msgstr "Αδύνατη η εμφάνιση της τοποθεσίας \"%s\""
 
 #: src/nautilus-connect-server-dialog.c:143
 #: src/nautilus-connect-server-dialog.c:158
@@ -5766,7 +5766,7 @@ msgstr "Προβολή ως %s"
 #: src/nautilus-navigation-window.c:689
 #, c-format
 msgid "%s - File Browser"
-msgstr "%s·- Περιηγητής Αρχείων"
+msgstr "%s - Περιηγητής Αρχείων"
 
 #: src/nautilus-notes-viewer.c:388 src/nautilus-notes-viewer.c:495
 msgid "Notes"
@@ -6107,9 +6107,9 @@ msgid ""
 "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the \n"
 "GNU General Public License for more details."
 msgstr ""
-"Ο Ναυτίλος διανέμεται με την ελπίδα οτι θα είναι χρήσιμος,·\n"
+"Ο Ναυτίλος διανέμεται με την ελπίδα οτι θα είναι χρήσιμος, \n"
 "αλλά ΧΩΡΙΣ ΚΑΜΜΙΑ ΑΠΟΛΥΤΩΣ ΕΓΓΥΗΣΗ για συγκεκριμένο σκοπό.\n"
-"Δείτε για περισσότερες λεπτομέρειες την GNU·General·Public·License·."
+"Δείτε για περισσότερες λεπτομέρειες την GNU General Public License ."
 
 #: src/nautilus-window-menus.c:415
 msgid ""
@@ -6117,9 +6117,9 @@ msgid ""
 "along with Nautilus; if not, write to the Free Software Foundation, Inc., \n"
 "59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
-"Θα πρέπει να έχετε λάβει ένα αντίγραφο της GNU·General·Public·License·\n"
-"μαζί με το Ναυτίλο. Αν όχι γράψτε στο Free·Software·Foundation,·Inc.,·\n"
-"59·Temple·Place,·Suite·330,·Boston,·MA··02111-1307··USA"
+"Θα πρέπει να έχετε λάβει ένα αντίγραφο της GNU General Public License \n"
+"μαζί με το Ναυτίλο. Αν όχι γράψτε στο Free Software Foundation, Inc., \n"
+"59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 
 #: src/nautilus-window-menus.c:444
 msgid ""
