--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-28  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation.
+
 2005-02-27  Nikos Charonitakis  <charosn@her.forthnet.gr>
 
 	* el.po: Updated Greek translation.
