--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-01  Abel Cheung  <maddog@linuxhall.org>
+
+	* zh_TW.po: Updated traditional Chinese translation from GNOME HK Team
+
 2005-02-28  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
