--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-01  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
 2005-02-27  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-list-view.c: (create_and_set_up_tree_view):
