Remove old files.
2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* data/applications.desktop.in:
	* data/favorites.desktop.in:
	Remove old files.

	* docs/Makefile.am (EXTRA_DIST):
	Remove nautilus-context-menus.txt from makefile

2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* POTFILES.in:
	Remove old files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-03-01  Alexander Larsson  <alexl@redhat.com>
 
+	* data/applications.desktop.in:
+	* data/favorites.desktop.in:
+	Remove old files.
+	
+	* docs/Makefile.am (EXTRA_DIST):
+	Remove nautilus-context-menus.txt from makefile
+
 	* NEWS:
 	Update for release
 
