--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-01  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Remove old files
+
 2005-03-01  Abel Cheung  <maddog@linuxhall.org>
 
 	* zh_TW.po: Updated traditional Chinese translation from GNOME HK Team
