Post release version bump
2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.9.92 ===

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-03-01  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.9.92 ===
+	
+2005-03-01  Alexander Larsson  <alexl@redhat.com>
+
 	* data/applications.desktop.in:
 	* data/favorites.desktop.in:
 	Remove old files.
