Move some old unused files to .skip for now
2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* POTFILES.skip:
	* POTFILES.in:
	Move some old unused files to .skip for now

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-01  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.skip: 
+	* POTFILES.in:
+	Move some old unused files to .skip for now
+
 === nautilus 2.9.92 ===
 	
 2005-03-01  Alexander Larsson  <alexl@redhat.com>
