--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-03-01  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-file-management-properties.glade:
+	Center dialog. Patch from Christian Neumair <chris@gnome-de.org>.
+
+2005-03-01  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Post release version bump
 
