--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-02  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2005-03-01  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
