--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-04  Žygimantas Beručka  <uid0@akl.lt>
+
+	* lt.po: Updated Lithuanian translation by Gintautas Miliauskas.
+
 2005-03-03  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
