--- a/po/cy.po
+++ b/po/cy.po
@@ -48,8 +48,8 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-02-10 12:02+0100\n"
-"PO-Revision-Date: 2005-01-21 07:41+0000\n"
-"Last-Translator: Rhys Jones <rhys@sucs.org>\n"
+"PO-Revision-Date: 2005-03-04 21:16+0000\n"
+"Last-Translator: Dafydd Harries <daf@muse.19inch.net>\n"
 "Language-Team: Cymraeg <gnome-cy@pengwyn.linux.org.uk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -995,7 +995,7 @@ msgstr "Gwrthdroi'r drefn mewn ffenestri newydd"
 #. Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone.
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:70
 msgid "Sans 10"
-msgstr ""
+msgstr "Sans 10"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:71
 msgid "Show folders first in windows"
@@ -1728,13 +1728,12 @@ msgid "The file \"%s\" already exists.  Would you like to replace it?"
 msgstr "Mae ffeil \"%s\" yn bodoli eisoes. A hoffech ei hamnewid?"
 
 #: libnautilus-private/nautilus-file-operations.c:1102
-#, fuzzy
 msgid ""
 "If you replace the existing folder, any files in it that conflict with the "
 "files being copied will be overwritten."
 msgstr ""
-"Os ydych yn amnewid plygell sy'n bodoli, fe drosysgrifir unrhyw ffeiliau "
-"ynddi sy'n gwrthdaro â'r ffeiliau sy'n cael eu copïo."
+"Os ydych yn amnewid plygell sy'n bodoli, caiff unrhyw ffeiliau "
+"ynddi sy'n gwrthdaro â'r ffeiliau sy'n cael eu copïo eu trosysgrifo."
 
 #: libnautilus-private/nautilus-file-operations.c:1104
 msgid "If you replace an existing file, its contents will be overwritten."
@@ -1909,9 +1908,8 @@ msgstr "Symud ffeiliau i'r sbwriel"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1933
-#, fuzzy
 msgid "Throwing out file:"
-msgstr "Perchennog y ffeil."
+msgstr "Yn taflu allan y ffeil:"
 
 #. localizers: label prepended to the name of the current file moved
 #: libnautilus-private/nautilus-file-operations.c:1935
@@ -1930,9 +1928,8 @@ msgstr "Symud ffeiliau"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1944
-#, fuzzy
 msgid "Moving file:"
-msgstr "Symud ffeiliau"
+msgstr "Yn symud y ffeil:"
 
 #: libnautilus-private/nautilus-file-operations.c:1947
 msgid "Preparing To Move..."
@@ -1949,9 +1946,8 @@ msgstr "Creu cysylltiad i'r ffeiliau"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1958
-#, fuzzy
 msgid "Linking file:"
-msgstr "Cysylltu"
+msgstr "Yn cysylltu'r ffeil:"
 
 #. localizers: label prepended to the name of the current file linked
 #: libnautilus-private/nautilus-file-operations.c:1960
@@ -1973,9 +1969,8 @@ msgstr "Copïo ffeiliau"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1970
-#, fuzzy
 msgid "Copying file:"
-msgstr "Copïo ffeiliau"
+msgstr "Yn copïo'r ffeil:"
 
 #. localizers: label prepended to the name of the current file copied
 #: libnautilus-private/nautilus-file-operations.c:1972
@@ -2127,16 +2122,16 @@ msgid "Preparing to Empty the Trash..."
 msgstr "Paratoi i Wacau'r Sbwriel..."
 
 #: libnautilus-private/nautilus-file-operations.c:2562
-#, fuzzy
 msgid "Empty all of the items from the trash?"
-msgstr "Ydych chi'n siŵr eich bod am wacau pob eitem o'r sbwriel?"
+msgstr "Gwacau pob eitem o'r sbwriel?"
 
 #: libnautilus-private/nautilus-file-operations.c:2565
-#, fuzzy
 msgid ""
 "If you choose to empty the trash, all items in it will be permanently lost. "
 "Please note that you can also delete them separately."
-msgstr "Os ydych yn gwacau'r sbwriel, caiff yr eitemau eu dileu yn barhaol."
+msgstr ""
+"Os ydych chi'n dewis gwacau'r sbwriel, caiff yr holl eitemau ynddi ei colli "
+"am bydd. Sylwer y gallwch eu dileu nhw un wrth un hefyd."
 
 #. name, stock id
 #: libnautilus-private/nautilus-file-operations.c:2587
@@ -3021,9 +3016,8 @@ msgid "Background"
 msgstr "Cefndir"
 
 #: src/file-manager/fm-desktop-icon-view.c:686
-#, fuzzy
 msgid "E_mpty Trash"
-msgstr "Gwacau'r Sbwriel"
+msgstr "_Gwacau'r Sbwriel"
 
 #. name, stock id
 #: src/file-manager/fm-desktop-icon-view.c:696
@@ -3808,14 +3802,12 @@ msgstr[2] "Agor mewn %d Ffenestr _Newydd"
 msgstr[3] "Agor mewn %d Ffenestr _Newydd"
 
 #: src/file-manager/fm-directory-view.c:6238
-#, fuzzy
 msgid "_Browse Folder"
-msgstr "Pori Plygell"
+msgstr "_Pori'r Plygell"
 
 #: src/file-manager/fm-directory-view.c:6240
-#, fuzzy
 msgid "_Browse Folders"
-msgstr "Pori Plygellau"
+msgstr "_Pori'r Plygellau"
 
 #: src/file-manager/fm-directory-view.c:6259
 msgid "_Delete from Trash"
@@ -5945,6 +5937,10 @@ msgid ""
 "the Free Software Foundation; either version 2 of the License, or \n"
 "(at your option) any later version."
 msgstr ""
+"Mae Nautilus yn feddalwedd rhydd; gallwch ei hailddosbarthu a/neu ei \n"
+"haddasu o dan delerau Trwydded Gyhoeddus Gyffredinol GNU fel y'i \n"
+"gyhoeddir gan y Free Software Foundation; un ai fersiwn 2 y Drwydded, \n"
+"neu (os y dewiswch) unrhyw fersiwn diweddarach."
 
 #: src/nautilus-window-menus.c:411
 msgid ""
@@ -5953,6 +5949,10 @@ msgid ""
 "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the \n"
 "GNU General Public License for more details."
 msgstr ""
+"Dosbarthir Nautilus yn y gobaith y bydd yn ddefnuddiol, ond \n"
+"HEB UNRHYW WARANT; heb yn oed y warant goblygiedig o FARSIANDWYAITH \n"
+"neu FFITRWYDD AT BWRPAS ARBENNIG. Gweler Trwydded Gyhoeddus \n"
+"Gyffredinol GNU am rhagor o fanylion.\n"
 
 #: src/nautilus-window-menus.c:415
 msgid ""
@@ -5960,6 +5960,9 @@ msgid ""
 "along with Nautilus; if not, write to the Free Software Foundation, Inc., \n"
 "59 Temple Place, Suite 330, Boston, MA  02111-1307  USA"
 msgstr ""
+"Dylech fod wedi derbyn copi o Drwydded Gyhoeddus Gyffredinol GNU ynghyd \n"
+"â’r rhaglen hon; os na, ysgrifennwch at y Free Software Foundation, Inc., \n"
+"59 Temple Place, Suite 330, Boston MA 02111-1307 USA"
 
 #: src/nautilus-window-menus.c:444
 msgid ""
@@ -5971,7 +5974,7 @@ msgstr ""
 
 #: src/nautilus-window-menus.c:448
 msgid "Copyright © 1999-2005 The Nautilus authors"
-msgstr ""
+msgstr "Hawlfraint © 1999-2005 Awduron Nautilus"
 
 #: src/nautilus-window-menus.c:453
 msgid "translator-credits"
