--- a/po/cy.po
+++ b/po/cy.po
@@ -5952,7 +5952,7 @@ msgstr ""
 "Dosbarthir Nautilus yn y gobaith y bydd yn ddefnuddiol, ond \n"
 "HEB UNRHYW WARANT; heb yn oed y warant goblygiedig o FARSIANDWYAITH \n"
 "neu FFITRWYDD AT BWRPAS ARBENNIG. Gweler Trwydded Gyhoeddus \n"
-"Gyffredinol GNU am rhagor o fanylion.\n"
+"Gyffredinol GNU am rhagor o fanylion."
 
 #: src/nautilus-window-menus.c:415
 msgid ""
