--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-03-07  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for 2.10.0
+	
+	* configure.in:
+	Bump version to 2.10.0, require eel 2.10.0
+
 2005-03-03  Elijah Newren  <newren@gmail.com>
 
 	If launched without startup-notification, make an approximation to
