--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 2.10.0 are:
+* Some fixes for startup notification to avoid focus-stealing
+* Center the file management prefs dialog
+
 Major changes in 2.9.92 are:
 * Avoid doing i/o to tree root nodes before they are used.
   This means we don't get authentication callbacks.
